--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript exercises №5</title>
+    <title>Around The World</title>
   </head>
   <body>
     <input type="text" id="search-box" placeholder="Enter country name" />
